@@ -11,6 +11,10 @@ and Marcelo Vanzin for contributing to this release.
 
 {{{ Bug fixes
 
+- In the manage panel, when selecting a library, the description panel do
+  not contains "null" for every fields and the title is set to the jar name
+  instead of "null" (Matthieu Casanova)
+
 - Update of textarea scrollbars and bufferSwitcher are now done in
   EventQueue thread (Matthieu Casanova #2946031)
 
